# libmatrix

./: .clang-format  .devcontainer.json  .editorconfig  .gitignore  CMakeLists.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improve-existing-docs.md
.github/workflows/: codeql.yml  greetings.yml  security.yml  stale.yml
ci/: boost.sh  full.sh
cmake/: create_test.cmake
examples/: CMakeLists.txt  main.cpp
include/matrix/: matrix.hpp
src/: CMakeLists.txt  matrix.cpp
tests/: CMakeLists.txt  test_matrix.cpp
